# pico-sht20

./: CMakeLists.txt  pico_sht20.c
